--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,13 +67,13 @@ body, html {
 }
 
 .separator:first-line {
-    background-color: rgb(244, 247, 210);
+    background-color: beige;
 }
 
 .separator:before,
 .separator:after {
     content: "__";
-    color: rgb(244, 247, 210);
+    background-color: beige;
 }
 
 .categoryimg {
