--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,8 +58,23 @@ body, html {
     margin-bottom: 80px;
 }
 
-h2 { width:100%; text-align:center; border-bottom: 1px solid #000; line-height:0.1em; margin:10px 0 20px; } 
-h2 span { background:#fff; padding:0 10px; }
+.separator {
+    font-size: 30px;
+    text-align: center;
+    height: 0.5em;
+    border-bottom: 2px solid black;
+    margin-bottom: 0.5em;
+}
+
+.separator:first-line {
+    background-color: beige;
+}
+
+.separator:before,
+.separator:after {
+    content: "__";
+    background-color: beige;
+}
 
 .categoryimg {
     display: flex;
